--- a/PassTheMessage/simpleStyle.css
+++ b/PassTheMessage/simpleStyle.css
@@ -1,14 +1,70 @@
 body {
 	background-color: #696969;
+	background: linear-gradient(0deg, rgba(73,73,73,1) 0
+	%, rgba(105,105,105,1) 76%);
 	}
-#boxDiv {
-	background-color:  #DCDCDC;
-	with: 250px;
-	height: 250px;
-	display: block;
+#outerDiv{
 	text-align: center;
 }
-#send {
-	background-color: red;
+#boxDiv {
+	background-color:  #d1d1d1;
+	background: linear-gradient(0deg, rgba(209,209,209,1) 15%, rgba(162,162,162,1) 80%);
+	width: 500px;
+	height: 450px;
+	display: block;
+	text-align: center;
 	display: inline-block;
+	margin: 1.8em;
+	/* shadow */
+	-webkit-box-shadow: 5px 7px 43px 1px rgba(61,60,61,0.65);
+	-moz-box-shadow: 5px 7px 43px 1px rgba(61,60,61,0.65);
+	box-shadow: 5px 7px 43px 1px rgba(61,60,61,0.65);
+	/* border */
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	/* color gradient */
+
+}
+#send {
+	/* width: 110px;
+	height: 70px; */
+	/* background-color: #5dbff0; */
+	margin-top: 7px;
+	box-shadow: 0px 10px 14px -7px #276873;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+
+}
+
+#text{
+	padding: 1.2em;
+	width: 200px;
+	font-size: 16px;
+	border-style: solid;
+  border-radius: 3px;
+  box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+	border-width: thin;
+	resize: none;
+}
+
+#messageBox {
+	width: 350px;
+	height: 120px;
+	margin: 0 auto;
+}
+
+#messageDisplay {
+	color: #4bacde;
+	font-size: 22px;
 }
